[tool.poetry]
name = "Mealie Bring API"
version = "1.2.3"
description = "A simple webserver that allows ingredients sent by Mealie to be added to a bring shopping list"
authors = ["Felix Schneider <mail@fschneider.me>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.1"
python-dotenv = "^1.1.1"
aiohttp = "^3.12.14"
bring-api = "1.1.1"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
