[tool.poetry]
name = "Mealie Bring API"
version = "1.2.5"
description = "A simple webserver that allows ingredients sent by Mealie to be added to a bring shopping list"
authors = ["Felix Schneider <mail@fschneider.me>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.3"
python-dotenv = "^1.2.2"
aiohttp = "^3.13.3"
bring-api = "1.1.1"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
